@@ -14,6 +14,21 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
 }
 
-tasks.named('test') {
+java {
+    sourceCompatibility = JavaVersion.VERSION_18
+    targetCompatibility = JavaVersion.VERSION_18
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+    options.compilerArgs += "-Xlint:preview"
+}
+
+tasks.withType(Test) {
     useJUnitPlatform()
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
